# yolo-fpga-accelerator

./: .gitignore  CMakeLists.txt  HLS_OPTIMIZATION_TASKLIST.md  LICENSE  Makefile  README.md  ROADMAP.md  clean_builds.sh  pipeline.yaml  yolo2_report.json
data/labels/: README.md  make_labels.py
hls/: api.hpp
hls/core/: core_compute.cpp  core_compute.hpp  core_io.cpp  core_io.hpp  core_scheduler.cpp  core_scheduler.hpp  types.hpp
include/core/: precision.hpp  yolo.h  yolo_cfg.hpp
linux_app/: Makefile  README.md  start_yolo.sh
linux_app/accel_package/: GENERATE_DTBO_FROM_XSA.md  README.md  create_accel_package.sh
linux_app/include/: dma_buffer_manager.h  file_loader.h  yolo2_accel_linux.h  yolo2_config.h  yolo2_draw.h  yolo2_ffmpeg_video.h  yolo2_image_loader.h  yolo2_inference.h  yolo2_labels.h  yolo2_log.h  yolo2_mjpeg_server.h  yolo2_mjpeg_streamer.h  yolo2_network.h  yolo2_postprocess.h  yolo2_v4l2.h
linux_app/setup/: README.md  install_udmabuf.sh  manual_udmabuf_install.sh
linux_app/src/: dma_buffer_manager.c  file_loader.c  main.c  stb_image_impl.c  stb_image_write_impl.c  yolo2_accel_linux.c  yolo2_draw.c  yolo2_ffmpeg_video.c  yolo2_image_loader.c  yolo2_log.c  (+7 more)
scripts/: YOLO2_REPORT_TOOL.md  hw_params_gen.py  run_pipeline.py  yolo2_report.py
src/: stb_image_implementation.cpp
vitis/: COSIM_README.md  COSIM_SUMMARY.md  IP_EXPORT_README.md  README.md  clean_and_rebuild.sh  run_cosim.sh  run_cosim.tcl  yolo2_cli.tcl  yolo2_cosim_tb.cpp  yolo2_int16_cli.tcl
vivado/: README.md  build_from_bd.sh  build_from_bd.tcl
weights/: .gitignore  README.md
(+30 files in other folders)
